# Small-little-side-hustle

./: .env.example  .gitignore  HANDOFF.md  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.claude/agents/: compliance-reviewer.md  edge-case-hunter.md  flow-checker.md  security-reviewer.md  test-guardian.md
.githooks/: pre-push
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  data_source_request.md  feature_request.md  new_signal.md
.github/workflows/: ci.yml  claude-review.yml  codeql.yml  compliance.yml  daily_pipeline.yml  signal_validation.yml
config/: logging_config.yaml  settings.py
docs/: ARCHITECTURE.md  CONTRIBUTING.md  DATA_CONTRACTS.md  DEPLOYMENT.md  MONITORING.md  PRINCIPLES.md  SECURITY.md  SIGNAL_REGISTRY.md  TESTING.md
scripts/: compliance_check.py  daily_run.py  run_real_backtest.py  seed_signal_registry.py  setup.sh
src/data/contracts/: schemas.py
src/data/factset/: client.py  estimates.py  fundamentals.py  ownership.py  quant_factors.py  source.py  supply_chain.py
src/data/market/: price_volume.py
src/data/public/: __init__.py  client.py  edgar.py  source.py  yahoo.py
src/data/source/: __init__.py  base.py  fixture.py
src/execution/madevolve/: runner.py
src/monitoring/: alerts.py  audit.py  logger.py  metrics.py
src/pipeline/: __init__.py  real_backtest.py
src/portfolio/: constraints.py  construction.py  mean_cvar.py  risk.py
src/utils/: compliance.py  dates.py  decorators.py  integrity.py  pit.py  validators.py
stubs/scipy/: __init__.pyi  optimize.pyi
tests/: synth.py
tests/integration/: test_backtest_runner.py  test_factset_connection.py  test_public_connection.py  test_signal_pipeline.py
tests/system/: test_end_to_end.py
tests/unit/: test_alpha_agent.py  test_audit.py  test_backtest_runner.py  test_compliance.py  test_constraints.py  test_decay_tester.py  test_dev_tooling.py  test_edgar_source.py  test_factor_dsl.py  test_factset_client.py  test_factset_source.py  test_fixture_data.py  test_fixture_source.py  test_fundamental_factors.py  test_ic_calculator.py  test_integrity.py  test_logger.py  test_mean_cvar.py  test_optimal_weights.py  test_ownership_signal.py  test_pit_guard.py  test_portfolio_construction.py  test_public_source.py  test_pvalue_test.py  test_quanta_alpha.py  test_real_backtest.py  test_regime_tester.py  test_risk.py  test_schemas.py  test_settings.py  test_signal_registry.py  test_signal_selector.py  test_splits.py  test_supply_chain_signal.py  test_truebeats.py  test_yahoo_source.py
(+23 files in other folders)
